--- a/SheldonMRossSolutions.tex
+++ b/SheldonMRossSolutions.tex
@@ -14,6 +14,7 @@
 \usepackage{subcaption}
 \usepackage{pgf-pie}
 \usepackage{float}
+\usepackage{titlesec}
 %\pgfplotsset{width=6in}
 \usepgfplotslibrary{statistics}
 \usepgfplotslibrary{fillbetween}
@@ -21,6 +22,7 @@
 
 \usepackage{sectsty}
 \chapterfont{\sffamily \color{MidnightBlue}}
+\sectionfont{\sffamily \color{MidnightBlue}}
 
 \setlist[enumerate, 1]{after={\bigskip}, leftmargin = \labelsep, label={\color{MidnightBlue}\textbf{\arabic*}}}
 \setlist[itemize]{after={\bigskip}}
@@ -52,8 +54,12 @@
 %	\include{./TeX_files/exercise07_new}
 %	\include{./TeX_files/chapter08}
 %	\include{./TeX_files/exercise08_new}
-	\include{./TeX_files/chapter09}
-	\include{./TeX_files/exercise09_new}
+%	\include{./TeX_files/chapter09}
+%	\include{./TeX_files/exercise09_new}
+%	\include{./TeX_files/chapter10}
+%	\include{./TeX_files/exercise10_new}
+	\include{./TeX_files/chapter11}
+	\include{./TeX_files/exercise11_new}
 	% bibliography, glossary and index would go here.
 	
 \end{document}
